--- a/index.html
+++ b/index.html
@@ -5,17 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Task Focus</title>
   <style>
+    :root {
+      --hero-teal: #2dd4c3;
+      --surface: #0f141b;
+      --surface-elevated: rgba(18, 22, 28, 0.92);
+      --text-primary: #e6eef7;
+      --text-secondary: #b0becd;
+      --card-radius: 16px;
+      --card-border-color: #1f272e;
+    }
+
     body {
-      background: #111;
-      color: #eee;
-      font-family: system-ui, sans-serif;
+      background: #0c1117;
+      color: var(--text-primary);
+      font-family: "Inter", "SF Pro Display", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      font-weight: 400;
+      line-height: 1.5;
       margin: 0;
-      padding: 1rem;
+      padding: 1.5rem 1.25rem 4rem;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
-    h1, h3 { color: #fff; }
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      color: #fff;
+      font-weight: 600;
+      line-height: 1.3;
+    }
     .billing-reminder {
       color: #ff6b6b;
       font-weight: 600;
@@ -29,11 +51,218 @@
       padding: 0.5rem; width: 100%;
     }
     textarea { resize: vertical; }
-    button {
-      background: #333; color: #fff; border: none; padding: 0.6rem 1rem;
-      margin: 0.5rem 0.25rem; cursor: pointer; border-radius: 4px;
+    button,
+    .btn,
+    .icon-button,
+    .link-button {
+      background: rgba(20, 28, 36, 0.8);
+      color: var(--text-primary);
+      border: 1px solid var(--card-border-color);
+      padding: 0.6rem 1rem;
+      margin: 0.5rem 0.25rem;
+      cursor: pointer;
+      border-radius: 12px;
+      transition: background 150ms ease, color 150ms ease, border-color 150ms ease;
     }
-    button:disabled { opacity: 0.4; cursor: not-allowed; }
+
+    button:hover,
+    .btn:hover,
+    .icon-button:hover,
+    .link-button:hover {
+      background: rgba(35, 46, 58, 0.85);
+      color: #f5f9ff;
+    }
+
+    button:focus-visible,
+    .btn:focus-visible,
+    .icon-button:focus-visible,
+    .link-button:focus-visible {
+      outline: 2px solid var(--hero-teal);
+      outline-offset: 2px;
+    }
+
+    button:disabled,
+    .btn:disabled,
+    .icon-button:disabled,
+    .link-button:disabled {
+      opacity: 0.4;
+      cursor: not-allowed;
+    }
+
+    .hero-cta {
+      background: var(--hero-teal);
+      color: #022624;
+      border-color: transparent;
+      box-shadow: 0 0 0 1px rgba(45, 212, 195, 0.35), 0 16px 40px rgba(45, 212, 195, 0.35);
+    }
+
+    .hero-cta:hover {
+      background: #27c2b0;
+      color: #011c1a;
+    }
+
+    .hero-cta:focus-visible {
+      outline: 3px solid rgba(45, 212, 195, 0.6);
+      outline-offset: 3px;
+    }
+
+    .start-action {
+      position: relative;
+      overflow: hidden;
+    }
+
+    .start-action::after,
+    .start-action::before {
+      content: "";
+      position: absolute;
+      pointer-events: none;
+      opacity: 0;
+    }
+
+    .start-action::after {
+      inset: -6px;
+      border: 2px solid var(--hero-teal);
+      border-radius: inherit;
+      transform: scale(0.75);
+    }
+
+    .start-action::before {
+      top: 50%;
+      left: 50%;
+      width: 12px;
+      height: 12px;
+      margin: -6px 0 0 -6px;
+      background: radial-gradient(circle, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0));
+      border-radius: 50%;
+      transform: scale(0.5);
+    }
+
+    .start-action.cta-reward-active::after {
+      animation: cta-ring-fill 200ms ease-out forwards;
+    }
+
+    .start-action.cta-reward-active::before {
+      animation: cta-sparkle 200ms ease-out forwards;
+    }
+
+    @keyframes cta-ring-fill {
+      0% {
+        opacity: 0.2;
+        transform: scale(0.65);
+      }
+      60% {
+        opacity: 0.6;
+      }
+      100% {
+        opacity: 0;
+        transform: scale(1.05);
+      }
+    }
+
+    @keyframes cta-sparkle {
+      0% {
+        opacity: 0;
+        transform: translate(-2px, -4px) scale(0.2);
+      }
+      50% {
+        opacity: 1;
+        transform: translate(0, -10px) scale(1);
+      }
+      100% {
+        opacity: 0;
+        transform: translate(2px, -16px) scale(0.4);
+      }
+    }
+
+    .card,
+    .peek,
+    .task-card,
+    .resource-button,
+    .worst-day-banner,
+    .worst-day-card,
+    .distraction-tools,
+    .distraction-log li,
+    .doorway-reset,
+    .gantt-card,
+    .chart-summary,
+    .subtask-row,
+    .routine-block,
+    .toast,
+    .modal__content,
+    .modal-card,
+    .wizard-content,
+    .audit-card,
+    .category-progress .line,
+    .category-progress .bar,
+    .history-list li,
+    .morning-blocks .routine-card,
+    .progress-strip,
+    .nbt-result-card,
+    .task-details,
+    .doorway-reset-actions button,
+    .next-task-card,
+    .due-today-card,
+    .status-card,
+    .next-best-card {
+      border-radius: var(--card-radius);
+      border: 1px solid var(--card-border-color);
+      background: var(--surface-elevated);
+    }
+
+    .resource-button,
+    .doorway-reset-actions button,
+    .card .link-button,
+    .next-task-actions button,
+    .worst-day-celebrations button,
+    .distraction-options button,
+    .subtask-actions button,
+    .module-inline-actions button,
+    .intention-buttons button,
+    .card-sticky-actions__primary > *,
+    .card-sticky-actions__secondary > * {
+      border-radius: 12px;
+    }
+
+    .card p,
+    .card li,
+    .task-card p,
+    .task-card .task-descriptors,
+    .worst-day-banner p,
+    .gantt-card p,
+    .doorway-reset p,
+    .distraction-log__label,
+    .chart-summary li,
+    .routine-block p,
+    .toast,
+    .modal-card p,
+    .wizard-content p,
+    .next-task-name,
+    .next-task-meta,
+    .nbt-result-card p,
+    .resource-button span,
+    .card .score,
+    .category-progress .line,
+    .next-best-empty,
+    .worst-day-hint {
+      max-width: 48ch;
+    }
+
+    .distraction-tools__header strong,
+    .distraction-log__time,
+    .worst-day-label,
+    .doorway-countdown,
+    .card small,
+    .chip,
+    .score,
+    label,
+    button,
+    input,
+    select,
+    textarea {
+      text-transform: none !important;
+      letter-spacing: normal !important;
+    }
+
     .peek { background: #222; margin-top: 1rem; padding: 1rem; border-radius: 6px; max-width: 600px; }
     .peek summary { cursor: pointer; }
     .task-list-header {
@@ -380,9 +609,9 @@
       min-height: 1.2em;
     }
     .worst-day-banner {
-      background: linear-gradient(120deg, rgba(44, 44, 52, 0.85), rgba(26, 28, 38, 0.85));
-      border-radius: 14px;
-      border: 1px solid rgba(255, 255, 255, 0.04);
+      background: var(--surface-elevated);
+      border-radius: var(--card-radius);
+      border: 1px solid var(--card-border-color);
       padding: 1rem;
       display: grid;
       gap: 0.55rem;
@@ -391,7 +620,6 @@
     .worst-day-banner h2 {
       margin: 0;
       font-size: 1.05rem;
-      letter-spacing: 0.02em;
       color: #f8f9fb;
     }
     .worst-day-button {
@@ -401,15 +629,18 @@
       font-weight: 600;
       padding: 0.85rem 1.1rem;
       border-radius: 12px;
-      background: linear-gradient(135deg, rgba(255, 102, 126, 0.95), rgba(255, 159, 108, 0.9));
-      color: #121212;
-      border: none;
-      cursor: pointer;
-      box-shadow: 0 18px 32px rgba(255, 102, 126, 0.25);
+      background: rgba(20, 28, 36, 0.8);
+      color: var(--text-primary);
+      border: 1px solid var(--card-border-color);
+      box-shadow: none;
+    }
+    .worst-day-button.hero-cta {
+      background: var(--hero-teal);
+      color: #022624;
+      border-color: transparent;
+      box-shadow: 0 0 0 1px rgba(45, 212, 195, 0.35), 0 16px 40px rgba(45, 212, 195, 0.35);
     }
     .worst-day-button:disabled {
-      opacity: 0.5;
-      cursor: not-allowed;
       box-shadow: none;
     }
     .worst-day-hint {
@@ -419,8 +650,8 @@
       text-align: center;
     }
     .worst-day-card {
-      background: rgba(18, 20, 28, 0.97);
-      border-radius: 16px;
+      background: var(--surface-elevated);
+      border-radius: var(--card-radius);
       padding: 1.25rem;
       width: min(92vw, 520px);
       box-shadow: 0 24px 46px rgba(0, 0, 0, 0.45);
@@ -1376,16 +1607,16 @@
     }
 
     :root {
-      --accent: #2dd4bf;
-      --background: #05090f;
-      --surface: rgba(18, 22, 28, 0.9);
-      --surface-muted: rgba(24, 28, 36, 0.9);
-      --border: rgba(255, 255, 255, 0.06);
-      --text-primary: #f4f7fb;
-      --text-secondary: #aeb8c9;
+      --accent: var(--hero-teal);
+      --background: #0c1117;
+      --surface: var(--surface-elevated);
+      --surface-muted: rgba(24, 32, 40, 0.92);
+      --border: var(--card-border-color);
+      --text-primary: #e6eef7;
+      --text-secondary: #a9b8c9;
       --text-muted: #6b7280;
-      --radius-lg: 14px;
-      --radius-md: 10px;
+      --radius-lg: var(--card-radius);
+      --radius-md: 12px;
       --shadow-soft: 0 18px 36px rgba(0, 0, 0, 0.35);
       --space-1: 8px;
       --space-2: 12px;
@@ -1408,7 +1639,8 @@
       align-items: center;
       justify-content: flex-start;
       padding: clamp(1.5rem, 4vw, 2.5rem) clamp(1rem, 4vw, 2.25rem) 120px;
-      line-height: 1.6;
+      line-height: 1.5;
+      font-weight: 400;
     }
 
     .app-shell {
@@ -2385,6 +2617,105 @@
       opacity: 0.45;
       cursor: not-allowed;
     }
+    /* --- Final global polish overrides --- */
+    body {
+      font-weight: 400;
+      line-height: 1.5;
+    }
+
+    .card,
+    .peek,
+    .task-card,
+    .resource-button,
+    .worst-day-banner,
+    .worst-day-card,
+    .distraction-tools,
+    .distraction-log li,
+    .doorway-reset,
+    .gantt-card,
+    .chart-summary,
+    .subtask-row,
+    .routine-block,
+    .toast,
+    .modal__content,
+    .modal-card,
+    .wizard-content,
+    .audit-card,
+    .category-progress .line,
+    .category-progress .bar,
+    .history-list li,
+    .progress-strip,
+    .nbt-result-card,
+    .task-details,
+    .next-task-card,
+    .due-today-card,
+    .status-card,
+    .next-best-card {
+      border-radius: var(--card-radius);
+      border: 1px solid var(--card-border-color);
+      background: var(--surface-elevated);
+    }
+
+    .btn-primary,
+    .btn-secondary,
+    .btn-ghost,
+    .btn-outline,
+    .btn-tertiary {
+      background: rgba(20, 28, 36, 0.8);
+      color: var(--text-primary);
+      border: 1px solid var(--card-border-color);
+      box-shadow: none;
+    }
+
+    .btn-secondary,
+    .btn-ghost,
+    .btn-outline,
+    .btn-tertiary {
+      color: var(--text-secondary);
+    }
+
+    .btn-primary:hover,
+    .btn-secondary:hover,
+    .btn-ghost:hover,
+    .btn-outline:hover,
+    .btn-tertiary:hover {
+      background: rgba(35, 46, 58, 0.85);
+      color: #f5f9ff;
+    }
+
+    .icon-button {
+      border-radius: 12px;
+      border: 1px solid var(--card-border-color);
+      background: rgba(20, 28, 36, 0.8);
+      padding: 0.5rem;
+    }
+
+    .resource-button {
+      text-decoration: none;
+      display: grid;
+      gap: 0.25rem;
+      padding: 0.85rem 1rem;
+      color: var(--text-primary);
+      background: rgba(20, 28, 36, 0.82);
+    }
+
+    .resource-button strong {
+      font-weight: 600;
+    }
+
+    .worst-day-button {
+      background: rgba(20, 28, 36, 0.8);
+      color: var(--text-primary);
+      border: 1px solid var(--card-border-color);
+      box-shadow: none;
+    }
+
+    .worst-day-button.hero-cta {
+      background: var(--hero-teal);
+      color: #022624;
+      border-color: transparent;
+      box-shadow: 0 0 0 1px rgba(45, 212, 195, 0.35), 0 16px 40px rgba(45, 212, 195, 0.35);
+    }
   </style>
 </head>
 <body>
@@ -2496,7 +2827,7 @@
 
       <div class="worst-day-banner" role="region" aria-labelledby="worstDayBannerTitle">
         <h2 id="worstDayBannerTitle">😵‍💫 Worst-Day Mode</h2>
-        <button id="worstDayButton" class="worst-day-button" type="button">Start 5 minutes</button>
+        <button id="worstDayButton" class="worst-day-button hero-cta start-action" type="button">Start 5 minutes</button>
         <p id="worstDayHint" class="worst-day-hint"></p>
       </div>
 
@@ -2824,7 +3155,7 @@
                   aria-label="Line chart of morning launch completion and energy trends"
                 ></canvas>
                 <div class="chart-legend" aria-hidden="true">
-                  <span><span class="legend-swatch completion"></span>Completion %</span>
+                  <span><span class="legend-swatch completion"></span>Ready progress</span>
                   <span><span class="legend-swatch energy"></span>Energy (1–5 scaled)</span>
                 </div>
                 <div id="morningLaunchChartSummary" class="module-note"></div>
@@ -4580,7 +4911,7 @@
     const summary = $("sleepCompletionSummary");
     if (!summary) return;
     const { total, completed, percent } = computeSleepCompletion(dateKey);
-    summary.textContent = `You hit ${completed}/${total} sleep steps – ${percent}% consistency.`;
+    summary.textContent = `You set ${completed}/${total} sleep steps ready – ${percent}% of the plan primed.`;
   }
 
   function renderSleepTips() {
@@ -4946,7 +5277,7 @@
       { value: 5, text: "5 – Critical Billing Window or Immediate Patient Need" },
       { value: 4, text: "4 – High Priority – Near-Term Deadline" },
       { value: 3, text: "3 – Moderate Priority – Monthly Closure" },
-      { value: 2, text: "2 – Low Billing Value – Already Overdue" },
+      { value: 2, text: "2 – Low Billing Value – Ready today" },
       { value: 1, text: "1 – Routine Follow-Up Work" }
     ],
     novelty: BASIC_NUMERIC_DESCRIPTORS,
@@ -10126,6 +10457,42 @@
     });
   }
 
+  function triggerStartReward(button) {
+    if (!button) return;
+    button.classList.add("start-action");
+    button.classList.remove("cta-reward-active");
+    void button.offsetWidth;
+    button.classList.add("cta-reward-active");
+    if (navigator?.vibrate) {
+      navigator.vibrate(12);
+    }
+    window.setTimeout(() => {
+      button.classList.remove("cta-reward-active");
+    }, 240);
+  }
+
+  function markStartRewardButtons() {
+    const buttons = document.querySelectorAll("button");
+    buttons.forEach(button => {
+      if (button.dataset.startReward === "ready") return;
+      const label = (button.textContent || button.getAttribute("aria-label") || "")
+        .trim()
+        .toLowerCase();
+      if (!label.startsWith("start")) return;
+      button.dataset.startReward = "ready";
+      button.classList.add("start-action");
+      button.addEventListener("click", () => triggerStartReward(button));
+    });
+  }
+
+  function setupStartRewardObserver() {
+    markStartRewardButtons();
+    const observer = new MutationObserver(() => {
+      markStartRewardButtons();
+    });
+    observer.observe(document.body, { childList: true, subtree: true });
+  }
+
   window.addEventListener('DOMContentLoaded', () => {
     const nextStepBtn = $("meltdownShieldNext");
     if (nextStepBtn) {
@@ -10184,6 +10551,7 @@
       }));
     }
     registerCategoryFilterControl();
+    setupStartRewardObserver();
     startReminderLoop();
     renderTemplates();
     updateUI();
