--- a/index.html
+++ b/index.html
@@ -363,22 +363,32 @@
 
     .stage-strip {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       justify-content: space-between;
-      gap: 0.5rem;
+      gap: 0.75rem;
       padding: 0.5rem 0.75rem;
       border-radius: 12px;
       border: 1px solid rgba(148, 163, 184, 0.18);
       background: rgba(13, 18, 26, 0.82);
+      flex-wrap: wrap;
     }
 
     .stage-strip .preflight-toggles {
       display: inline-flex;
       gap: 0.35rem;
+      flex-wrap: wrap;
+      align-items: center;
     }
 
-    .stage-strip #categoryProgress {
+    .stage-strip__accordion {
       flex: 1;
+      min-width: 240px;
+      display: grid;
+      gap: 0.5rem;
+    }
+
+    .stage-strip__accordion .accordion__summary {
+      margin: 0;
     }
 
     .next-focus-head {
@@ -1194,27 +1204,47 @@
     .category-filter button.active {
       background: #666;
     }
+    .category-progress-panel {
+      background: var(--surface-muted);
+      border: 1px solid rgba(255, 255, 255, 0.05);
+      border-radius: var(--radius-md);
+      padding: var(--space-2);
+      display: grid;
+      gap: var(--space-2);
+    }
+
     .category-progress {
-      margin-top: 0.5rem;
+      display: grid;
+      gap: 0.6rem;
       width: 100%;
-      max-width: 600px;
     }
+
     .category-progress .line {
-      margin-bottom: 0.5rem;
+      display: grid;
+      gap: 0.35rem;
       font-size: 0.85rem;
+      color: var(--text-secondary);
     }
+
+    .category-progress__title {
+      font-weight: 500;
+      color: var(--text-primary);
+    }
+
     .category-progress .bar {
-      background: #333;
+      background: rgba(148, 163, 184, 0.12);
       width: 100%;
-      height: 6px;
-      border-radius: 3px;
+      height: 8px;
+      border-radius: 999px;
       overflow: hidden;
     }
+
     .category-progress .bar .fill {
-      background: #0a84ff;
+      background: linear-gradient(90deg, rgba(45, 212, 195, 0.65), rgba(14, 165, 233, 0.65));
       height: 100%;
       display: block;
       width: 0%;
+      transition: width 220ms ease-out;
     }
     .subtask-row {
       display: flex;
@@ -3281,12 +3311,12 @@
       gap: var(--space-2);
     }
 
-    .due-today-accordion {
+    .accordion {
       display: grid;
       gap: var(--space-2);
     }
 
-    .due-today-summary {
+    .accordion__summary {
       width: 100%;
       background: rgba(148, 163, 184, 0.08);
       border: 1px solid rgba(148, 163, 184, 0.18);
@@ -3298,23 +3328,24 @@
       color: var(--text-secondary);
       cursor: pointer;
       font-size: 0.85rem;
-      transition: border-color var(--transition), color var(--transition), background var(--transition);
+      transition: border-color var(--transition), color var(--transition), background var(--transition),
+        box-shadow var(--transition);
     }
 
-    .due-today-summary:hover,
-    .due-today-summary:focus-visible {
+    .accordion__summary:hover,
+    .accordion__summary:focus-visible {
       border-color: rgba(148, 163, 184, 0.35);
       color: var(--text-primary);
       background: rgba(148, 163, 184, 0.14);
       box-shadow: 0 0 0 3px rgba(45, 212, 195, 0.6);
     }
 
-    .due-today-summary__icon {
+    .accordion__icon {
       font-size: 0.75rem;
       transition: transform var(--transition);
     }
 
-    .due-today-accordion[data-open="true"] .due-today-summary__icon {
+    .accordion[data-open="true"] .accordion__icon {
       transform: rotate(90deg);
     }
 
@@ -4228,7 +4259,16 @@
             <span id="nextTaskActionHint" class="visually-hidden">Long-press for quick capture.</span>
           </button>
           <div id="nextTaskChips" class="starter-fit-chips" aria-live="polite"></div>
-          <button id="rescueLaunchButton" class="btn starter-rescue" type="button">🛟 Rescue</button>
+          <button
+            id="rescueLaunchButton"
+            class="btn starter-rescue"
+            type="button"
+            aria-haspopup="dialog"
+            aria-controls="sosOverlay"
+            aria-expanded="false"
+          >
+            🛟 Rescue
+          </button>
         </div>
 
         <section id="nextTaskCard" class="card next-task-card hidden" aria-live="polite">
@@ -4329,7 +4369,7 @@
           </div>
         </section>
 
-        <div class="stage-strip" role="group" aria-label="Stage prep toggles">
+        <div class="stage-strip" role="group" aria-label="Stage prep toggles and category progress">
           <div class="preflight-toggles" role="group" aria-label="Pre-flight toggles">
             <button
               type="button"
@@ -4359,7 +4399,24 @@
               ⏱️
             </button>
           </div>
-          <div id="categoryProgress" class="category-progress"></div>
+          <div class="stage-strip__accordion">
+            <div id="categoryProgressAccordion" class="accordion" data-open="false">
+              <button
+                id="categoryProgressSummary"
+                class="accordion__summary"
+                type="button"
+                aria-expanded="false"
+                aria-controls="categoryProgressPanel"
+              >
+                <span id="categoryProgressSummaryText">No category progress yet</span>
+                <span class="accordion__icon" aria-hidden="true">▸</span>
+              </button>
+              <div id="categoryProgressPanel" class="category-progress-panel" hidden>
+                <div id="categoryProgress" class="category-progress"></div>
+              </div>
+            </div>
+            <p id="categoryProgressEmpty" class="due-today-empty hidden">Add tasks with categories to see progress.</p>
+          </div>
         </div>
       </div>
 
@@ -4379,16 +4436,16 @@
           <h2>Due today</h2>
           <span class="chip chip-muted section-chip">Ready today</span>
         </div>
-        <div id="dueTodayAccordion" class="due-today-accordion" data-open="false">
+        <div id="dueTodayAccordion" class="accordion" data-open="false">
           <button
             id="dueTodaySummary"
-            class="due-today-summary"
+            class="accordion__summary"
             type="button"
             aria-expanded="false"
             aria-controls="dueTodayList"
           >
             <span id="dueTodaySummaryText">0 ready • est —</span>
-            <span class="due-today-summary__icon" aria-hidden="true">▸</span>
+            <span class="accordion__icon" aria-hidden="true">▸</span>
           </button>
           <div id="dueTodayList" class="due-today-list" hidden></div>
         </div>
@@ -4401,16 +4458,16 @@
           <h2 id="allTasksTitle">All Tasks</h2>
           <span id="allTasksSummaryChip" class="chip chip-muted section-chip hidden"></span>
         </div>
-        <div id="allTasksAccordion" class="due-today-accordion" data-open="false">
+        <div id="allTasksAccordion" class="accordion" data-open="false">
           <button
             id="allTasksSummary"
-            class="due-today-summary"
+            class="accordion__summary"
             type="button"
             aria-expanded="false"
             aria-controls="allTasksPanel"
           >
             <span id="allTasksSummaryText">0 active</span>
-            <span class="due-today-summary__icon" aria-hidden="true">▸</span>
+            <span class="accordion__icon" aria-hidden="true">▸</span>
           </button>
           <div id="allTasksPanel" class="all-tasks-panel" hidden>
             <div class="task-panel-actions">
@@ -5147,7 +5204,7 @@
   >
     <div class="sos-card">
       <header class="sos-card__header">
-        <h2 id="sosOverlayTitle">Crisis Support</h2>
+        <h2 id="sosOverlayTitle">Rescue Tools</h2>
         <button id="sosOverlayClose" class="sos-card__close" type="button" aria-label="Close crisis support">✕</button>
       </header>
       <div class="sos-card__actions">
@@ -10131,30 +10188,82 @@
 
   // render progress per category
   function renderCategoryProgress() {
+    const accordion = $("categoryProgressAccordion");
+    const summaryBtn = $("categoryProgressSummary");
+    const summaryText = $("categoryProgressSummaryText");
+    const panel = $("categoryProgressPanel");
     const cont = $("categoryProgress");
-    cont.innerHTML = "";
-    categories.forEach(cat => {
-      const total = tasks.filter(t => t.category === cat).length;
-      if (total === 0) return;
-      const done = tasks.filter(t => t.category === cat && isTaskCompleted(t)).length;
-      const percent = (done / total) * 100;
+    const emptyEl = $("categoryProgressEmpty");
+    if (!accordion || !summaryBtn || !summaryText || !panel || !cont || !emptyEl) return;
 
+    if (!summaryBtn.dataset.listenerBound) {
+      summaryBtn.dataset.listenerBound = "true";
+      summaryBtn.addEventListener("click", () => {
+        const nextOpen = accordion.dataset.open !== "true";
+        setCategoryProgressOpen(nextOpen);
+      });
+    }
+
+    const progressEntries = categories
+      .map(cat => {
+        const total = tasks.filter(t => t.category === cat).length;
+        if (total === 0) return null;
+        const done = tasks.filter(t => t.category === cat && isTaskCompleted(t)).length;
+        const percent = total === 0 ? 0 : Math.round((done / total) * 100);
+        return { name: cat, total, done, percent };
+      })
+      .filter(Boolean);
+
+    cont.innerHTML = "";
+
+    if (!progressEntries.length) {
+      accordion.classList.add("hidden");
+      emptyEl.classList.remove("hidden");
+      summaryText.textContent = "No category progress yet";
+      setCategoryProgressOpen(false);
+      panel.hidden = true;
+      return;
+    }
+
+    accordion.classList.remove("hidden");
+    emptyEl.classList.add("hidden");
+
+    progressEntries.forEach(entry => {
       const line = document.createElement("div");
       line.className = "line";
+
       const title = document.createElement("span");
-      title.textContent = `${cat}: ${done}/${total} complete`;
+      title.className = "category-progress__title";
+      title.textContent = `${entry.name}: ${entry.done}/${entry.total} complete`;
       line.appendChild(title);
 
       const bar = document.createElement("div");
       bar.className = "bar";
       const fill = document.createElement("span");
       fill.className = "fill";
-      fill.style.width = percent + "%";
+      const clampedPercent = Math.min(100, Math.max(0, entry.percent));
+      fill.style.width = `${clampedPercent}%`;
+      fill.setAttribute("aria-hidden", "true");
+      bar.setAttribute("role", "progressbar");
+      bar.setAttribute("aria-valuemin", "0");
+      bar.setAttribute("aria-valuemax", String(entry.total));
+      bar.setAttribute("aria-valuenow", String(entry.done));
+      bar.setAttribute("aria-label", `${entry.name} progress`);
+      bar.setAttribute("aria-valuetext", `${entry.done} of ${entry.total}`);
       bar.appendChild(fill);
 
       line.appendChild(bar);
       cont.appendChild(line);
     });
+
+    const categoriesLabel = progressEntries.length === 1 ? "1 category" : `${progressEntries.length} categories`;
+    const totalTasks = progressEntries.reduce((sum, entry) => sum + entry.total, 0);
+    const doneTasks = progressEntries.reduce((sum, entry) => sum + entry.done, 0);
+    summaryText.textContent = `${categoriesLabel} • ${doneTasks}/${totalTasks} complete`;
+
+    const isOpen = accordion.dataset.open === "true";
+    summaryBtn.setAttribute("aria-expanded", isOpen ? "true" : "false");
+    panel.hidden = !isOpen;
   }
 
   function buildTaskDescriptors(task) {
@@ -11193,6 +11302,17 @@
     if (open && options.focusSummary) {
       summaryBtn.focus();
     }
+  }
+
+  function setCategoryProgressOpen(open) {
+    const accordion = $("categoryProgressAccordion");
+    const summaryBtn = $("categoryProgressSummary");
+    const panel = $("categoryProgressPanel");
+    if (!accordion || !summaryBtn || !panel) return;
+    const nextState = open ? "true" : "false";
+    accordion.dataset.open = nextState;
+    summaryBtn.setAttribute("aria-expanded", open ? "true" : "false");
+    panel.hidden = !open;
   }
 
   function computeWantScore(task) {
@@ -12821,31 +12941,52 @@
   }
 
   function initializeSosPanel() {
-    const sosButton = $("meltdownSosButton");
     const overlay = $("sosOverlay");
     const closeBtn = $("sosOverlayClose");
     const shieldBtn = $("sosShield");
     const defuseBtn = $("sosDefuse");
     const worstDayBtn = $("worstDayButton");
-    if (!sosButton || !overlay) return;
+    if (!overlay) return;
+
+    const triggers = ["meltdownSosButton", "rescueLaunchButton"].map(id => $(id)).filter(Boolean);
+    if (!triggers.length) return;
 
     let sosOpen = false;
-    const setSosOpen = open => {
+    let lastTrigger = null;
+
+    const setTriggerExpanded = expanded => {
+      triggers.forEach(btn => btn.setAttribute("aria-expanded", expanded ? "true" : "false"));
+    };
+
+    const setSosOpen = (open, options = {}) => {
       sosOpen = Boolean(open);
+      setTriggerExpanded(sosOpen);
       if (sosOpen) {
         overlay.classList.remove("hidden");
         overlay.setAttribute("aria-hidden", "false");
+        if (options.trigger) {
+          lastTrigger = options.trigger;
+        }
         if (closeBtn) {
           closeBtn.focus();
         }
       } else {
         overlay.classList.add("hidden");
         overlay.setAttribute("aria-hidden", "true");
-        sosButton.focus();
+        if (options.returnFocus !== false) {
+          const focusTarget = options.focusTarget || lastTrigger || triggers[0];
+          if (focusTarget && typeof focusTarget.focus === "function") {
+            focusTarget.focus();
+          }
+        }
       }
     };
 
-    sosButton.addEventListener("click", () => setSosOpen(true));
+    triggers.forEach(btn => {
+      btn.addEventListener("click", () => setSosOpen(true, { trigger: btn }));
+      btn.setAttribute("aria-expanded", "false");
+    });
+
     if (closeBtn) {
       closeBtn.addEventListener("click", () => setSosOpen(false));
     }
@@ -12867,13 +13008,13 @@
     }
     if (defuseBtn) {
       defuseBtn.addEventListener("click", () => {
-        setSosOpen(false);
-        lastDefuseOpener = sosButton;
+        setSosOpen(false, { returnFocus: false });
+        lastDefuseOpener = lastTrigger || triggers[0];
         openDefuseOverlay();
       });
     }
     if (worstDayBtn) {
-      worstDayBtn.addEventListener("click", () => setSosOpen(false));
+      worstDayBtn.addEventListener("click", () => setSosOpen(false, { returnFocus: false }));
     }
   }
 
